--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "preact": "^10.5.15"
+    "preact": "^10.5.15",
+    "sass": "^1.52.2"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.1.5",
