--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "preact": "^10.5.15",
-    "sass": "^1.52.2"
+    "react-hook-form": "^7.31.3",
+    "sass": "^1.52.2",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.1.5",
